Add VulkanSurface::SetSize() to implement resize.

This method will recreate VulkanSwapChain in VulkanSurface with the new size.
This CL also adds a new param old_swap_chain for VulkanSwapChain::Initialize(),
so we can create a SwapChain correctly.

Bug: 866914
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I2042f389c69a591a325f7b530fff1e554cca5e66
Reviewed-on: https://chromium-review.googlesource.com/1184977
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Reviewed-by: Victor Miura <vmiura@chromium.org>
Reviewed-by: Michael Spang <spang@chromium.org>
Commit-Queue: Peng Huang <penghuang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586776}
Former-commit-id: 8f6992ac7f1e39303e5fa3e2cf5b47cf58410aa5